--- a/Css/style.css
+++ b/Css/style.css
@@ -22,10 +22,12 @@ button{
     cursor: pointer;    
     border: 0;
     border-radius: 9px;
+    box-shadow:0 0 0.01em black;
+    
     
 }
 button:hover{
-    background: #454b5c;
+    background: #2A2D37;
 
 }
  #container{
@@ -39,6 +41,7 @@ button:hover{
     font-family:'Lucida Sans' ;
     text-align: center;
     border-radius: 10px;
+    
     
     
  }
@@ -61,9 +64,10 @@ button:hover{
      margin:3px;
      
  }
+ 
 
  #clear:hover{
-    background: #454b5c;
+    background: #2A2D37;
 
 }
 
